--- a/index.html
+++ b/index.html
@@ -273,14 +273,20 @@
         .contact-icon {
             width: 30px;
             height: 30px;
+            min-width: 30px;
+            min-height: 30px;
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-shrink: 0;
         }
 
         .contact-icon svg {
-            width: 100%;
-            height: 100%;
+            width: 24px;
+            height: 24px;
+            min-width: 24px;
+            min-height: 24px;
+            display: block;
         }
 
         .instagram-icon {
@@ -308,6 +314,33 @@
             font-size: 1rem;
             font-weight: 600;
             color: #333;
+        }
+
+        /* Mobile Responsive */
+        @media (max-width: 600px) {
+            .contact-links {
+                flex-direction: column;
+                gap: 15px;
+            }
+
+            .contact-item {
+                width: 100%;
+                justify-content: center;
+            }
+
+            .contact-icon {
+                width: 28px;
+                height: 28px;
+                min-width: 28px;
+                min-height: 28px;
+            }
+
+            .contact-icon svg {
+                width: 22px;
+                height: 22px;
+                min-width: 22px;
+                min-height: 22px;
+            }
         }
 
         /* Animation for numbers */
@@ -543,7 +576,7 @@
                 <!-- Email -->
                 <a href="mailto:eastdallascricket@gmail.com" class="contact-item">
                     <div class="contact-icon">
-                        <svg class="email-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="email-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
                             <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                         </svg>
                     </div>
