Updated index.html to remove emoji

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             
             <!-- Player Counter Section -->
             <div class="player-counter-section">
-                <h2>👨🏽 Registered Players 🏏</h2>
+                <h2>👨🏽 Registered Players</h2>
                 <div class="player-count" id="playerCount">0</div>
             </div>
             
