Some more cosmetic changes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         }
 
         .player-counter-section h2 {
-            color: #333;
+            color: #2c3e70;
             font-size: 1.5rem;
             margin-bottom: 20px;
         }
@@ -105,7 +105,7 @@
         }
 
         .countdown-section h2 {
-            color: #333;
+            color: #2c3e70;
             font-size: 1.5rem;
             margin-bottom: 10px;
         }
@@ -239,7 +239,7 @@
         }
 
         .contact-section h2 {
-            color: #333;
+            color: #2c3e70;
             font-size: 1.5rem;
             margin-bottom: 20px;
         }
@@ -313,7 +313,7 @@
         .contact-value {
             font-size: 1rem;
             font-weight: 600;
-            color: #333;
+            color: #2c3e70;
         }
 
         /* Mobile Responsive */
@@ -512,13 +512,13 @@
             
             <!-- Player Counter Section -->
             <div class="player-counter-section">
-                <h2>👨🏽 Registered Players</h2>
+                <h2>Registered Players</h2>
                 <div class="player-count" id="playerCount">0</div>
             </div>
             
             <!-- Countdown Timer Section -->
             <div class="countdown-section">
-                <h2>⏰ Countdown to Spring T20! 🏆</h2>
+                <h2>Countdown to Spring T20 🏆</h2>
                 <p class="target-date">March 1, 2026</p>
                 <div class="countdown-timer">
                     <div class="time-box">
