--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             min-height: 100vh;
-            background: linear-gradient(135deg, #f5f7fa 0%, #e4e8ec 50%, #d9e2ec 100%);
+            background: linear-gradient(135deg, rgba(245, 247, 250, 0.8) 0%, rgba(228, 232, 236, 0.8) 50%, rgba(217, 226, 236, 0.8) 100%), url('edcc-players-img.png');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -30,13 +33,16 @@
 
         /* Logo Styles */
         .logo {
-            max-width: 900px;
+            max-width: 700px;
             height: auto;
             margin: 0 auto;
-            padding: 0 0 30px 0;
+            padding: 20px;
             display: block;
             filter: drop-shadow(0 4px 15px rgba(0, 0, 0, 0.1));
             transition: transform 0.3s ease;
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 20px;
+            margin-bottom: 30px;
         }
 
         .logo:hover {
@@ -71,7 +77,7 @@
         }
 
         .player-counter-section h2 {
-            color: #2c3e70;
+            color: #223a70;
             font-size: 1.5rem;
             margin-bottom: 20px;
         }
@@ -79,7 +85,7 @@
         .player-count {
             font-size: 5rem;
             font-weight: bold;
-            color: #5c6bc0;
+            color: #223a70;
             text-shadow: 0 4px 15px rgba(92, 107, 192, 0.3);
             margin: auto 0;
             display: flex;
@@ -105,14 +111,14 @@
         }
 
         .countdown-section h2 {
-            color: #2c3e70;
+            color: #223a70;
             font-size: 1.5rem;
             margin-bottom: 10px;
         }
 
         .target-date {
-            color: #5c6bc0;
-            font-size: 1.2rem;
+            color: #f54e4e;
+            font-size: 1.3rem;
             margin-bottom: 30px;
             font-weight: 600;
         }
@@ -138,14 +144,14 @@
 
         .time-box:hover {
             transform: scale(1.05);
-            border-color: #5c6bc0;
+            border-color: #223a70;
             box-shadow: 0 10px 30px rgba(92, 107, 192, 0.2);
         }
 
         .time-value {
             font-size: 2rem;
             font-weight: bold;
-            color: #5c6bc0;
+            color: #223a70;
             text-shadow: 0 4px 15px rgba(92, 107, 192, 0.3);
             display: block;
         }
@@ -162,7 +168,7 @@
         /* Registration Section */
         .registration-section {
             margin-top: 40px;
-            background: linear-gradient(135deg, #5c6bc0 0%, #3f51b5 100%);
+            background: linear-gradient(135deg, #223a70 0%, #3f51b5 100%);
             backdrop-filter: blur(10px);
             border-radius: 20px;
             padding: 40px;
@@ -196,7 +202,7 @@
             padding: 18px 40px;
             font-size: 1.2rem;
             font-weight: bold;
-            color: #5c6bc0;
+            color: #223a70;
             background: #fff;
             border: none;
             border-radius: 50px;
@@ -214,7 +220,7 @@
         .register-btn svg {
             width: 24px;
             height: 24px;
-            fill: #5c6bc0;
+            fill: #223a70;
         }
 
         .registration-note {
@@ -239,7 +245,7 @@
         }
 
         .contact-section h2 {
-            color: #2c3e70;
+            color: #223a70;
             font-size: 1.5rem;
             margin-bottom: 20px;
         }
@@ -266,7 +272,7 @@
 
         .contact-item:hover {
             transform: translateY(-3px);
-            border-color: #5c6bc0;
+            border-color: #223a70;
             box-shadow: 0 10px 30px rgba(92, 107, 192, 0.2);
         }
 
@@ -294,7 +300,7 @@
         }
 
         .email-icon {
-            fill: #5c6bc0;
+            fill: #223a70;
         }
 
         .contact-text {
@@ -518,8 +524,8 @@
             
             <!-- Countdown Timer Section -->
             <div class="countdown-section">
-                <h2>Countdown to Spring T20 🏆</h2>
-                <p class="target-date">March 1, 2026</p>
+                <h2>Spring T20 starts <span class="target-date">March 1, 2026</span></h2>
+                <!-- <p class="target-date">March 1, 2026</p> -->
                 <div class="countdown-timer">
                     <div class="time-box">
                         <span class="time-value" id="days">00</span>
