--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         @media (max-width: 600px) {
             .logo {
                 max-width: 280px;
-                padding: 0 0 20px 0;
+                padding: 20px;
             }
 
             .player-count {
