--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
         @media (max-width: 600px) {
             .logo {
-                max-width: 280px;
+                max-width: 350px;
                 padding: 20px;
             }
 
@@ -448,6 +448,11 @@
         }
 
         @media (max-width: 400px) {
+            .logo {
+                max-width: 300px;
+                padding: 20px;
+            }
+
             .time-box {
                 min-width: 50px;
                 padding: 10px 6px;
