--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         .contact-label {
             font-size: 0.75rem;
             color: #888;
-            text-transform: uppercase;
+            /* text-transform: uppercase; */
             letter-spacing: 1px;
         }
 
@@ -579,8 +579,8 @@
                         </svg>
                     </div>
                     <div class="contact-text">
-                        <span class="contact-label">Instagram</span>
-                        <span class="contact-value">@eastdallascricket</span>
+                        <span class="contact-label">@eastdallascricket</span>
+                        <!-- <span class="contact-value">@eastdallascricket</span> -->
                     </div>
                 </a>
 
@@ -592,8 +592,8 @@
                         </svg>
                     </div>
                     <div class="contact-text">
-                        <span class="contact-label">Email</span>
-                        <span class="contact-value">eastdallascricket@gmail.com</span>
+                        <span class="contact-label">eastdallascricket@gmail.com</span>
+                        <!-- <span class="contact-value">eastdallascricket@gmail.com</span> -->
                     </div>
                 </a>
 
