--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
         }
 
         .target-date {
-            color: #f54e4e;
-            font-size: 1.3rem;
+            color: #c9a24d;
+            font-size: 1.5rem;
             margin-bottom: 30px;
-            font-weight: 600;
+            font-weight: 700;
+            letter-spacing: 0.3px;
         }
 
         .countdown-timer {
