--- a/index.html
+++ b/index.html
@@ -472,7 +472,14 @@
             }
         }
 
-        /* Particle effect background */
+        /* iOS background fix */
+        @supports (-webkit-touch-callout: none) {
+            body {
+                background-attachment: scroll;
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+            }
+        }
         .particles {
             position: fixed;
             top: 0;
