--- a/index.html
+++ b/index.html
@@ -11,13 +11,32 @@
             box-sizing: border-box;
         }
 
+        /* ================= FIXED BACKGROUND (iOS SAFE) ================= */
+        .bg-fixed {
+            position: fixed;
+            inset: 0;
+            z-index: -2;
+            background:
+                linear-gradient(
+                    135deg,
+                    rgba(245, 247, 250, 0.8) 0%,
+                    rgba(228, 232, 236, 0.8) 50%,
+                    rgba(217, 226, 236, 0.8) 100%
+                ),
+                url('edcc-players-img.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            transform: translateZ(0);
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             min-height: 100vh;
-            background: linear-gradient(135deg, rgba(245, 247, 250, 0.8) 0%, rgba(228, 232, 236, 0.8) 50%, rgba(217, 226, 236, 0.8) 100%), url('edcc-players-img.png');
+            /* background: linear-gradient(135deg, rgba(245, 247, 250, 0.8) 0%, rgba(228, 232, 236, 0.8) 50%, rgba(217, 226, 236, 0.8) 100%), url('edcc-players-img.png');
             background-size: cover;
             background-position: center;
-            background-attachment: fixed;
+            background-attachment: fixed; */
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -472,12 +491,6 @@
             }
         }
 
-        @media (max-width: 768px) {
-            body {
-                background-attachment: scroll;
-            }
-        }
-
         /* Particle effect background */
         .particles {
             position: fixed;
@@ -518,6 +531,7 @@
     </style>
 </head>
 <body>
+    <div class="bg-fixed"></div>
     <div class="particles" id="particles"></div>
     
     <div class="container">
