--- a/index.html
+++ b/index.html
@@ -343,11 +343,11 @@
         }
 
         .about-content.collapsed {
-            max-height: 240px;
+            max-height: 250px;
         }
 
         .about-content.expanded {
-            max-height: 1000px;
+            max-height: 1200px;
         }
 
         .show-more-btn {
@@ -1107,7 +1107,7 @@
             {
                 icon: '🏆',
                 title: 'Balanced teams',
-                description: 'Strategic team building with player auctions to create balanced teams'
+                description: 'Draft style player selections to create well balanced teams'
             },
             {
                 icon: '🏆',
